test_case/rust-lang_rust/46720_351876422.rs
Rust
fn main() {
    let x = 0;
    match x {
        _ => {
            4 //~ ERROR
        }
    } // (there's a missing semicolon here)
    println!("hi!");
}
